[package]
name = "operan"
version = "0.1.0"
authors = ["Niclas Rosengren <niclas.rosengren@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.42"
tokio = { version = "1.2.0", default-features = false, features = [ "sync" ] }
